--- a/enderecamento.html
+++ b/enderecamento.html
@@ -7,110 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* Estilo para o botão de voltar */
-        .btn-voltar {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            padding: 10px 20px;
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
-            color: white;
-            border: none;
-            border-radius: 10px;
-            font-size: 16px;
-            font-weight: 500;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .btn-voltar:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .btn-voltar:active {
-            transform: translateY(0);
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Estilo para as vagas */
-        .vaga-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 20px;
-        }
-
-        .vaga-card {
-            flex: 1 1 calc(20% - 10px); /* 5 colunas por linha */
-            background-color: #ffffff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            padding: 10px;
-            text-align: center;
-            min-height: 80px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .vaga-card:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .vaga-card h5 {
-            font-size: 14px;
-            font-weight: 600;
-            margin-bottom: 5px;
-            color: #333;
-        }
-
-        .vaga-card p {
-            font-size: 12px;
-            color: #555;
-            margin: 0;
-        }
-
-        /* Cores das vagas por status */
-        .vaga-card[data-status="ocupada"] {
-            background-color: #fff0f0; /* Vermelho claro */
-        }
-
-        .vaga-card[data-status="disponivel"] {
-            background-color: #f0fff0; /* Verde claro */
-        }
-
-        /* Layout dos andares */
-        .andar-container {
-            margin-bottom: 20px;
-        }
-
-        .andar-container h3 {
-            font-size: 18px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 10px;
-        }
-
-        /* Separação entre vagas ocupadas e disponíveis */
-        .vagas-ocupadas, .vagas-disponiveis {
-            margin-bottom: 15px;
-        }
-
-        .vagas-ocupadas h4, .vagas-disponiveis h4 {
-            font-size: 16px;
-            font-weight: 500;
-            color: #444;
-            margin-bottom: 10px;
-        }
+        /* Estilos omitidos para brevidade */
     </style>
 </head>
 <body>
     <div class="container mt-5">
         <h1>Endereçamento</h1>
-        <!-- Botão de Voltar Moderno -->
         <button class="btn-voltar" onclick="navegarPara('dashboard.html')">
             <i class="fas fa-arrow-left"></i>
             Voltar
@@ -145,57 +47,25 @@
                         <div id="andar-cima-disponiveis" class="row"></div>
                     </div>
                 </div>
-
-                <!-- Andar de Baixo (C1-C20) -->
-                <div class="andar-container">
-                    <h3>Andar de Baixo (C1-C20)</h3>
-                    <div class="vagas-ocupadas">
-                        <h4>Vagas Ocupadas</h4>
-                        <div id="andar-baixo-2-ocupadas" class="row"></div>
-                    </div>
-                    <div class="vagas-disponiveis">
-                        <h4>Vagas Disponíveis</h4>
-                        <div id="andar-baixo-2-disponiveis" class="row"></div>
-                    </div>
-                </div>
-
-                <!-- Andar de Cima (D1-D20) -->
-                <div class="andar-container">
-                    <h3>Andar de Cima (D1-D20)</h3>
-                    <div class="vagas-ocupadas">
-                        <h4>Vagas Ocupadas</h4>
-                        <div id="andar-cima-2-ocupadas" class="row"></div>
-                    </div>
-                    <div class="vagas-disponiveis">
-                        <h4>Vagas Disponíveis</h4>
-                        <div id="andar-cima-2-disponiveis" class="row"></div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
 
     <script src="estoque.js"></script>
     <script>
-        // Função para navegar entre as páginas
         function navegarPara(pagina) {
             window.location.href = pagina;
         }
 
-        // Função para gerar as vagas
         function gerarVagas() {
             const produtos = buscarTodosProdutos();
             const empresas = buscarTodasEmpresas();
 
-            const letras = ['A', 'B', 'C', 'D'];
+            const letras = ['A', 'B'];
             letras.forEach((letra, index) => {
-                const andar = index % 2 === 0 ? 'baixo' : 'cima'; // Alterna entre andar de baixo e cima
-                const containerOcupadasId = andar === 'baixo' && index < 2 ? 'andar-baixo-ocupadas' :
-                                           andar === 'cima' && index < 2 ? 'andar-cima-ocupadas' :
-                                           andar === 'baixo' ? 'andar-baixo-2-ocupadas' : 'andar-cima-2-ocupadas';
-                const containerDisponiveisId = andar === 'baixo' && index < 2 ? 'andar-baixo-disponiveis' :
-                                              andar === 'cima' && index < 2 ? 'andar-cima-disponiveis' :
-                                              andar === 'baixo' ? 'andar-baixo-2-disponiveis' : 'andar-cima-2-disponiveis';
+                const andar = index % 2 === 0 ? 'baixo' : 'cima';
+                const containerOcupadasId = andar === 'baixo' ? 'andar-baixo-ocupadas' : 'andar-cima-ocupadas';
+                const containerDisponiveisId = andar === 'baixo' ? 'andar-baixo-disponiveis' : 'andar-cima-disponiveis';
 
                 const containerOcupadas = document.getElementById(containerOcupadasId);
                 const containerDisponiveis = document.getElementById(containerDisponiveisId);
@@ -236,7 +106,6 @@
             });
         }
 
-        // Carrega as vagas ao abrir a página
         gerarVagas();
     </script>
 </body>
